Making make step not stopping.

--- a/load/kubernetes/Makefile
+++ b/load/kubernetes/Makefile
@@ -13,7 +13,7 @@ deploy:  creds deploy.config
 	kubectl apply -f "$(BASEDIR)/hammer-strike-deployment.yaml"
 
 deploy.config:
-	kubectl create configmap load-url \
+	-kubectl create configmap load-url \
 	--from-literal=url=https://$(GAE_HOST)/load/
 
 clean: clean.deployment clean.service clean.config
