Made this change so that load gets distributed evenly.

--- a/load/kubernetes/hammer-strike-service.yaml
+++ b/load/kubernetes/hammer-strike-service.yaml
@@ -5,6 +5,7 @@ metadata:
     name: hammer-strike
   name: hammer-strike
 spec:
+  externalTrafficPolicy: Local
   type: NodePort
   ports:
     - name: "http"
