Adding default targets to make it easer to get started.

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,6 +1,11 @@
 BASEDIR = $(shell pwd)
 include ../Makefile.properties
 
+.DEFAULT_GOAL := app
+
+app: create deploy
+
+
 create: env
 	gcloud app create --project $(PROJECT) --region $(REGION)
 
