--- a/Sample.properties
+++ b/Sample.properties
@@ -20,3 +20,5 @@ env:
 	gcloud config set project $(PROJECT)
 	gcloud config set compute/zone $(ZONE)
 
+creds:
+        gcloud container clusters get-credentials $(CLUSTER)
