Changes for load testing for disruption detector

--- a/load/kubernetes/Makefile
+++ b/load/kubernetes/Makefile
@@ -29,7 +29,7 @@ deploy:  creds deploy.config
 
 deploy.config:
 	-kubectl create configmap load-url \
-	--from-literal=url=https://$(GAE_HOST)/load/
+	--from-literal=url=http://$(GAE_HOST)/
 
 clean: clean.deployment clean.service clean.config
 
